# Library-management-backend

./: .env.example  .gitignore  Dockerfile  compose.yaml  config.py  main.py  package-lock.json  pyproject.toml  utils.py  walkthrough.md
admin/: repo.py  router.py  service.py
agent/: __init__.py  config.py  employee_agent.py  library_agent.py  rag.py  rag_service.py  router.py  schemas.py  service.py  tools.py
agent/isbn/: __init__.py  external_lookup.py  pipeline.py  vision_chain.py
agent/rag_utils/: __init__.py  chunking.py  embeddings.py  retrieve.py  vector_store.py
alembic/: env.py
alembic/versions/: 141077ee5325_create_requests_table.py  2ed989d3cd46_.py  (+20 more)
audit/: repo.py  router.py  schema.py  service.py
auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py  utils.py
book/: repo.py  router.py  schemas.py  service.py
book_copy/: repo.py  router.py  schema.py  service.py
borrowed_book/: repo.py  router.py  schema.py  service.py
chroma_db/: chroma.sqlite3
database/: connection.py
exceptions/: __init__.py  handler.py
middleware/: __init__.py
models/: __init__.py  audit.py  book.py  book_copy.py  borrowed_book.py  entity.py  notifications.py  requests.py  review.py  shelf.py  user.py  wishlist.py
notifications/: repo.py  router.py  schema.py  service.py
request/: repo.py  router.py  schema.py  service.py
review/: repo.py  router.py  schema.py  service.py
shelf/: repo.py  router.py  schema.py  service.py
tests/: conftest.py
user/: repository.py
wishlist/: repo.py  router.py  schemas.py  service.py
(+2 files in other folders)
